--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -2,3 +2,5 @@
 // ------------------------------------------------------------------------------
 
 @include webFont('Montserrat', 'Montserrat', 400);
+
+@include webFont('Bree Serif', 'BreeSerif-Regular', 400);
