--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -2,6 +2,7 @@
 // ------------------------------------------------------------------------------
 
 $font-default: 'Montserrat', sans-serif;
+$font-second: 'Bree Serif', sans-serif;
 
 // Colors
 $white: #fff;
