--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,5 +21,6 @@
 @import 'layout/lists';
 @import 'layout/icon-font';
 // MODULES
+@import 'modules/banner';
 // PLUGINS
 @import 'plugins/swiper';
