initial header look

--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -7,6 +7,7 @@ $font-second: 'Bree Serif', sans-serif;
 // Colors
 $white: #fff;
 $black: #000;
+$black-fake: #333;
 $site-colors: (
 	'black': $black,
 	'white': $white
