--- a/src/scss/layout/_icon-font.scss
+++ b/src/scss/layout/_icon-font.scss
@@ -3,10 +3,11 @@ $__iconfont__data: map-merge(if(global_variable_exists('__iconfont__data'), $__i
 		"ico-facebook": "\ea01",
 		"ico-google": "\ea02",
 		"ico-instagram": "\ea03",
-		"ico-pinterest": "\ea04",
-		"ico-slider-arrow": "\ea05",
-		"ico-twitter": "\ea06",
-		"ico-youtube": "\ea07"
+		"ico-menu": "\ea04",
+		"ico-pinterest": "\ea05",
+		"ico-slider-arrow": "\ea06",
+		"ico-twitter": "\ea07",
+		"ico-youtube": "\ea08"
 	)
 ));
 
