--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -5,7 +5,10 @@ body {
 	font-family: $font-default;
 	font-size: 14px;
 	font-weight: 400;
-	color: $black;
+	color: $black-fake;
+	* {
+		color: $black-fake;
+	}
 }
 
 .scroll-disabled {
@@ -17,7 +20,7 @@ body {
 
 .wrap {
 	margin: 0 auto;
-	max-width: 1280px;
+	max-width: 1440px;
 	padding: 0 20px;
 	width: 100%;
 }
