--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,7 @@
 @import 'layout/lists';
 @import 'layout/icon-font';
 // MODULES
+@import 'modules/header';
 @import 'modules/banner';
 // PLUGINS
 @import 'plugins/swiper';
