--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -8,6 +8,7 @@ $font-second: 'Bree Serif', sans-serif;
 $white: #fff;
 $black: #000;
 $black-fake: #333;
+$brown-light: #c09d88;
 $site-colors: (
 	'black': $black,
 	'white': $white
