--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -13,7 +13,7 @@
 		transform: initial;
 		&.active {
 			.header__logo-img {
-				fill: #c09d88;
+				fill: $brown-light;
 				transform: scale(1.5);
 			}
 		}
@@ -31,7 +31,7 @@
 	border: 2px solid $white;
 	border-radius: 50px;
 	box-shadow: 0 4px 4px 0 #00000040;
-	background: linear-gradient(90deg, #c09d88 0%, rgba(235, 236, 240, 0) 98.82%);
+	background: linear-gradient(90deg, $brown-light 0%, rgba(235, 236, 240, 0) 98.82%);
 	position: relative;
 	@include media-breakpoint-down(lg) {
 		justify-content: space-between;
