--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -8,7 +8,11 @@ $font-second: 'Bree Serif', sans-serif;
 $white: #fff;
 $black: #000;
 $black-fake: #333;
-$brown-light: #c09d88;
+$gray: #383838;
+$gray-light: #999;
+$gray-lighter: #cacaca;
+$brown-light: #c2977c;
+$brown-lighter: #e7c6b1;
 $site-colors: (
 	'black': $black,
 	'white': $white
