--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,5 +24,6 @@
 @import 'modules/header';
 @import 'modules/banner';
 @import 'modules/time';
+@import 'modules/footer';
 // PLUGINS
 @import 'plugins/swiper';
