--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,6 +24,7 @@
 @import 'modules/header';
 @import 'modules/banner';
 @import 'modules/time';
+@import 'modules/testimonials';
 @import 'modules/footer';
 // PLUGINS
 @import 'plugins/swiper';
