--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -9,6 +9,7 @@ $white: #fff;
 $black: #000;
 $black-fake: #333;
 $gray: #383838;
+$gray-dark: #222;
 $gray-light: #999;
 $gray-lighter: #cacaca;
 $brown-light: #c2977c;
