--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,6 +23,7 @@
 // MODULES
 @import 'modules/header';
 @import 'modules/banner';
+@import 'modules/about';
 @import 'modules/time';
 @import 'modules/testimonials';
 @import 'modules/footer';
