--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -12,6 +12,7 @@ $gray: #383838;
 $gray-dark: #222;
 $gray-light: #999;
 $gray-lighter: #cacaca;
+$brown: #c09d88;
 $brown-light: #c2977c;
 $brown-lighter: #e7c6b1;
 $site-colors: (
