--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -25,6 +25,7 @@
 @import 'modules/banner';
 @import 'modules/about';
 @import 'modules/time';
+@import 'modules/popular';
 @import 'modules/info';
 @import 'modules/testimonials';
 @import 'modules/footer';
