--- a/src/scss/modules/_testimonials.scss
+++ b/src/scss/modules/_testimonials.scss
@@ -77,7 +77,7 @@
 }
 
 .testimonials__pagination {
-	position: static !important;
+	position: relative !important;
 	.swiper-pagination-bullet {
 		width: 10px;
 		height: 10px;
