--- a/src/scss/modules/_info.scss
+++ b/src/scss/modules/_info.scss
@@ -111,6 +111,9 @@
 		img {
 			transform: translateX(-10px);
 		}
+		.info__img--left {
+			transform: translateX(-30%);
+		}
 		.info__subheading {
 			display: block;
 			position: absolute;
