--- a/src/scss/modules/_popular.scss
+++ b/src/scss/modules/_popular.scss
@@ -21,6 +21,9 @@
 	justify-content: center;
 	align-items: center;
 	position: relative;
+	@include media-breakpoint-down(sm) {
+		margin-bottom: 25px;
+	}
 }
 
 .popular__title {
@@ -179,6 +182,7 @@
 		}
 	}
 	@include media-breakpoint-down(sm) {
-		display: none;
+		position: relative !important;
+		top: 0 !important;
 	}
 }
