bio bg color update

--- a/src/scss/modules/_info.scss
+++ b/src/scss/modules/_info.scss
@@ -318,7 +318,7 @@
 		right: 30px;
 		bottom: 0;
 		padding: 40px 20px;
-		background-color: $brown;
+		background-color: rgba($brown, 0.8);
 		border-radius: 8px;
 		max-height: 70%;
 		height: 100%;
