--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -15,6 +15,11 @@ body {
 	&.scroll-y {
 		overflow-y: visible;
 	}
+	&.loaded {
+		.loader {
+			pointer-events: none;
+		}
+	}
 }
 
 .scroll-disabled {
