--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -33,6 +33,9 @@
 	box-shadow: 0 4px 4px 0 #00000040;
 	background: linear-gradient(90deg, $brown-light 0%, rgba(235, 236, 240, 0) 98.82%);
 	position: relative;
+	@include media-breakpoint-up(xl) {
+		width: fit-content;
+	}
 	@include media-breakpoint-down(lg) {
 		justify-content: space-between;
 		padding: 0 35px;
@@ -75,6 +78,9 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	@include media-breakpoint-up(xl) {
+		opacity: 0;
+	}
 	@include media-breakpoint-down(lg) {
 		position: static;
 		transform: initial;
@@ -101,8 +107,8 @@
 .nav__container {
 	@include media-breakpoint-down(lg) {
 		position: fixed;
-		top: 0;
-		left: 0;
+		top: -27px;
+		left: -22px;
 		width: 100vw;
 		height: 100vh;
 		transform: translate(0, 0);
