--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -152,6 +152,8 @@
 	position: relative;
 	transition: color 0.5s ease-in-out;
 	white-space: nowrap;
+	letter-spacing: 0.5px;
+	color: $white;
 	&::after {
 		content: '';
 		position: absolute;
@@ -175,6 +177,9 @@
 		&::after {
 			transform: scale(1);
 		}
+	}
+	@include media-breakpoint-down(lg) {
+		color: $black-fake;
 	}
 	@include media-breakpoint-between(md, lg) {
 		margin-bottom: 25px;
