--- a/src/scss/modules/_banner.scss
+++ b/src/scss/modules/_banner.scss
@@ -43,6 +43,20 @@
 	}
 }
 
+.banner__canvas {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translate(-50%, 0);
+	height: auto;
+	width: auto;
+	min-width: 100%;
+	min-height: 100%;
+	@include media-breakpoint-down(lg) {
+		display: none;
+	}
+}
+
 .banner__prefix {
 	position: absolute;
 	top: 44%;
