--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -119,9 +119,15 @@
 .footer__copy {
 	font-size: 14px;
 	font-weight: 400;
-	line-height: 17px;
+	line-height: 20px;
 	letter-spacing: 0;
 	text-align: center;
 	color: $gray-light;
 	display: block;
+	a {
+		color: inherit;
+		@include hover {
+			text-decoration: underline;
+		}
+	}
 }
