--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -43,3 +43,33 @@ body {
 [data-object-fit='contain'] {
 	object-fit: contain;
 }
+
+.arrow-up {
+	width: 45px;
+	height: 45px;
+	background-color: $brown;
+	position: fixed;
+	bottom: 50px;
+	right: 50px;
+	z-index: 50;
+	border: 1px solid $white;
+	border-radius: 2px;
+	opacity: 0;
+	pointer-events: none;
+	transition: opacity 0.3s ease-in-out;
+	&.visible {
+		opacity: 1;
+		pointer-events: all;
+	}
+	.icon {
+		display: flex;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%) rotate(90deg);
+		font-size: 8px;
+		line-height: 8px;
+		color: $white;
+		height: 8px;
+	}
+}
