--- a/src/scss/modules/_popular.scss
+++ b/src/scss/modules/_popular.scss
@@ -35,11 +35,13 @@
 	text-align: center;
 	color: $white;
 	margin-bottom: 24px;
+	opacity: 0;
 }
 
 .popular__slider-primary-box {
 	position: relative;
 	width: 100%;
+	opacity: 0;
 }
 
 .popular__slider-primary {
@@ -92,6 +94,7 @@
 	align-items: center;
 	max-width: 100%;
 	margin-bottom: 30px;
+	opacity: 0;
 	@include media-breakpoint-down(sm) {
 		margin-bottom: 0;
 	}
@@ -173,6 +176,7 @@
 	position: relative !important;
 	left: 50%;
 	display: block;
+	opacity: 0;
 	.swiper-pagination-bullet {
 		width: 10px;
 		height: 10px;
