--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -31,6 +31,7 @@
 .footer__logo {
 	max-width: 470px;
 	margin-bottom: 18px;
+	opacity: 0;
 	@include media-breakpoint-between(md, lg) {
 		margin-bottom: 11px;
 	}
@@ -51,6 +52,7 @@
 	color: $brown-light;
 	margin-bottom: 8px;
 	transition: color 0.4s ease-in-out;
+	opacity: 0;
 	@include hover {
 		color: $brown-lighter;
 	}
@@ -67,6 +69,7 @@
 	display: inline-block;
 	margin-bottom: 8px;
 	transition: color 0.4s ease-in-out;
+	opacity: 0;
 	@include hover {
 		color: $gray-light;
 	}
@@ -81,11 +84,13 @@
 	text-align: center;
 	color: $brown-light;
 	margin-bottom: 49px;
+	opacity: 0;
 }
 
 .footer__social-media {
 	display: flex;
 	justify-content: center;
+	opacity: 0;
 }
 
 .footer__social {
@@ -124,6 +129,7 @@
 	text-align: center;
 	color: $gray-light;
 	display: block;
+	opacity: 0;
 	a {
 		color: inherit;
 		@include hover {
