--- a/src/scss/modules/_info.scss
+++ b/src/scss/modules/_info.scss
@@ -35,6 +35,7 @@
 	top: 50px;
 	left: 50%;
 	transform: translateX(-50%);
+	opacity: 0;
 	@include media-breakpoint-down(md) {
 		top: -32px;
 	}
@@ -83,6 +84,8 @@
 	flex: 1 1 57.598%;
 	width: 100%;
 	position: relative;
+	transform: translateY(20%);
+	opacity: 0;
 	&::before {
 		content: '';
 		width: 90.337%;
@@ -143,6 +146,7 @@
 	width: 100%;
 	padding-left: 5px;
 	padding-top: 19.3%;
+	opacity: 0;
 	@include media-breakpoint-down(md) {
 		padding-top: 25.5%;
 	}
