--- a/src/scss/modules/_time.scss
+++ b/src/scss/modules/_time.scss
@@ -27,6 +27,7 @@
 	text-align: center;
 	color: $white;
 	margin-bottom: 15px;
+	opacity: 0;
 	@include media-breakpoint-down(sm) {
 		font-size: 20px;
 		font-weight: 400;
@@ -38,6 +39,7 @@
 .time__logo {
 	max-width: 58px;
 	margin-bottom: 32px;
+	opacity: 0;
 	@include media-breakpoint-down(sm) {
 		max-width: 30px;
 		margin-bottom: 35px;
@@ -70,6 +72,7 @@
 	padding: 22px 38px 28px;
 	background-color: $black;
 	margin: 0 10px;
+	transform: scale(0);
 	@include media-breakpoint-between(md, lg) {
 		flex: 1 1 33.333%;
 		max-width: 33.333%;
@@ -112,6 +115,7 @@
 	line-height: 20px;
 	font-weight: 400;
 	text-align: center;
+	opacity: 0;
 	@include media-breakpoint-down(sm) {
 		max-width: 79%;
 	}
