--- a/src/scss/modules/_loader.scss
+++ b/src/scss/modules/_loader.scss
@@ -11,3 +11,40 @@
 	z-index: 1001;
 	opacity: 1;
 }
+
+.loader__dots {
+	width: 30px;
+	aspect-ratio: 8/5;
+	-webkit-mask: no-repeat radial-gradient(#ffffff69 68%, #0000 71%), no-repeat radial-gradient(#ffffff69 68%, #0000 71%), no-repeat radial-gradient(#ffffff69 68%, #0000 71%);
+	-webkit-mask-size: 25% 40%;
+	background: $white;
+	animation: load 2s infinite;
+	position: absolute;
+	left: 50%;
+	bottom: 5%;
+	transform: translate(-50%, 0);
+}
+
+@keyframes load {
+	0% {
+		-webkit-mask-position: 0% 0%, 50% 0%, 100% 0%;
+	}
+	16.67% {
+		-webkit-mask-position: 0% 100%, 50% 0%, 100% 0%;
+	}
+	33.33% {
+		-webkit-mask-position: 0% 100%, 50% 100%, 100% 0%;
+	}
+	50% {
+		-webkit-mask-position: 0% 100%, 50% 100%, 100% 100%;
+	}
+	66.67% {
+		-webkit-mask-position: 0% 0%, 50% 100%, 100% 100%;
+	}
+	83.33% {
+		-webkit-mask-position: 0% 0%, 50% 0%, 100% 100%;
+	}
+	100% {
+		-webkit-mask-position: 0% 0%, 50% 0%, 100% 0%;
+	}
+}
