--- a/src/scss/modules/_about.scss
+++ b/src/scss/modules/_about.scss
@@ -76,6 +76,27 @@
 	}
 }
 
+.about__box {
+	@include media-breakpoint-up(md) {
+		position: relative;
+		padding-bottom: 32%;
+		overflow-y: auto;
+		&::-webkit-scrollbar-track {
+			border: 1px solid $white;
+			background-color: rgba(191, 157, 135, 0.133);
+		}
+		&::-webkit-scrollbar {
+			width: 5px;
+			background-color: rgba(192, 157, 135, 0.133);
+		}
+		&::-webkit-scrollbar-thumb {
+			background-color: rgba(192, 157, 135, 0.667);
+			border-radius: 10px;
+			width: 5px;
+		}
+	}
+}
+
 .about__title {
 	font-family: $font-second;
 	font-size: 24px;
@@ -110,6 +131,11 @@
 	color: $black-fake;
 	margin-bottom: 19px;
 	max-width: 700px;
+	@include media-breakpoint-up(md) {
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
 }
 
 .about__signature {
