--- a/src/scss/modules/_info.scss
+++ b/src/scss/modules/_info.scss
@@ -119,7 +119,10 @@
 			transform: translateX(-10px);
 		}
 		.info__img--left {
-			transform: translateX(-38%);
+			transform: translateX(-24%);
+			&.info__img--specific {
+				transform: translateX(-36%);
+			}
 		}
 		.info__subheading {
 			display: block;
@@ -156,8 +159,14 @@
 		right: 23px;
 		top: 32px;
 		flex: 1 1 auto;
-		max-width: initial;
 		width: auto;
+		max-width: 50%;
+	}
+}
+
+.info__img--specific {
+	@include media-breakpoint-down(sm) {
+		transform: translateX(-36%);
 	}
 }
 
