--- a/src/scss/modules/_about.scss
+++ b/src/scss/modules/_about.scss
@@ -140,6 +140,8 @@
 
 .about__signature {
 	display: block;
+	margin-top: 20px;
+	max-width: 160px;
 	@include media-breakpoint-down(sm) {
 		margin: 0 auto;
 	}
